--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "grunt-throttle",
   "description": "A Grunt plugin for testing under a throttled connection.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "Tiago Quelhas <tiagoq@gmail.com>",
-  "license": "BSD",
+  "license": "BSD-3-Clause",
   "main": "Gruntfile.js",
   "repository": {
     "type": "git",
